<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogPageGoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPage"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="335dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/list_Dialog_GoTo_inp"
            android:numeric="integer" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="252dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPage">

        <Button
            android:id="@+id/btnDialogPathCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_Dialog_GoTo_BTN_Cancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnDialogPathOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/list_Dialog_GoTo_BTN_OK" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>